--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 #spring.datasource.url=jdbc:sqlserver://eafinalproject.database.windows.net:1433;database=customers;user=victorbahta@eafinalproject;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 #spring.datasource.username=victorbahta
 #spring.datasource.password=Finalproject1
