[Order] Implement Shopping Cart functions.

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+api-client:
+  name: customer-rest-service
+  url: http://localhost:8081
+#  username: user
+#  password: pass
