--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,16 +1,27 @@
 server:
-  port: 8081
+  port: 8083
+
 
 spring:
   datasource:
-    url: jdbc:sqlserver://eafinalproject.database.windows.net:1433;database=shopping_cart;user=victorbahta@eafinalproject;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:mysql://localhost:3306/shopping_cart
+    username: root
+    password: quocnamle
+    driverClassName: com.mysql.cj.jdbc.Driver
+#spring:
+#  datasource:
+#    url: jdbc:sqlserver://eafinalproject.database.windows.net:1433;database=shopping_cart;user=victorbahta@eafinalproject;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
       ddl-auto: update
 
 api-client:
-  name: customer-rest-service
-  url: http://localhost:8081
+  customer:
+    name: customer-service
+    url: http://localhost:8081
+  product:
+    name: product-service
+    url: http://localhost:8084
 #  username: user
 #  password: pass
