--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
       ddl-auto: update
       show-sql: true
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
