--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:sqlserver://eafinalproject.database.windows.net:1433;database=products;user=victorbahta@eafinalproject;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    url: jdbc:sqlserver://eafinalproject2.database.windows.net:1433;database=products;user=tiendm@eafinalproject2;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     database-platform: org.hibernate.dialect.SQLServer2012Dialect
     hibernate:
       ddl-auto: update
-      show-sql: true
+    show-sql: true
 
 eureka:
   instance:
