--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,30 +1,24 @@
 server:
   port: 8083
 
-
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/shopping_cart
-#    username: root
-#    password: quocnamle
-#    driverClassName: com.mysql.cj.jdbc.Driver
 spring:
   datasource:
     url: jdbc:sqlserver://eafinalproject2.database.windows.net:1433;database=shopping_cart;user=tiendm@eafinalproject2;password=Finalproject1;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    hikari:
+      maximumPoolSize: 10
   jpa:
+    #    show-sql: true
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.SQLServerDialect
 
-api-client:
-  customer:
-    name: customer-service
-    url: http://localhost:8083
-  product:
-    name: product-service
-    url: http://localhost:8083
-#  username: user
-#  password: pass
 eureka:
   instance:
     preferIpAddress: true
@@ -33,3 +27,10 @@ eureka:
     fetchRegistry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+api-client:
+  customer:
+    name: CustomerService
+  product:
+    name: ProductService
+    url: http://localhost:8083
