--- a/auth/src/main/resources/bootstrap.yml
+++ b/auth/src/main/resources/bootstrap.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: AuthenticationService
+  main:
+    web-application-type: reactive
+  cloud:
+    config:
+      uri: http://localhost:8088
